--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,10 @@
     <color name="app_red">#F44336</color>
     <color name="dark_red">#D32F2F</color>
 
+    <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="shadow_black">#3D000000</color>
+    <color name="theater_black">#212121</color>
     <color name="dark_gray">#616161</color>
     <color name="gray">#9E9E9E</color>
     <color name="gray_300">#E0E0E0</color>
