--- a/app/src/main/res/layout/restaurant_cell.xml
+++ b/app/src/main/res/layout/restaurant_cell.xml
@@ -14,7 +14,8 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginRight="8dp"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true"
+        android:visibility="gone"/>
 
     <LinearLayout
         android:id="@+id/distance_container"
@@ -23,7 +24,8 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <com.joanzapata.iconify.widget.IconTextView
             android:id="@+id/distance_icon"
@@ -57,7 +59,8 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginRight="4dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/restaurant_name"
@@ -101,5 +104,78 @@
             android:layout_height="wrap_content"
             android:textColor="@color/gray"
             android:textSize="13dp"/>
+    </LinearLayout>
+
+    <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+        android:id="@+id/thumbnail_stub"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginRight="8dp"
+        android:layout_centerVertical="true"/>
+
+    <LinearLayout
+        android:id="@+id/distance_stub"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+            android:layout_width="24dp"
+            android:layout_height="24dp"/>
+
+        <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="8dp"
+            android:layout_width="52dp"
+            android:layout_height="19dp"/>
+
+        <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+            android:layout_width="28dp"
+            android:layout_height="19dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/info_stub"
+        android:layout_toRightOf="@id/thumbnail_stub"
+        android:layout_toLeftOf="@id/distance_stub"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="4dp"
+        android:orientation="vertical">
+
+        <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+            android:layout_width="100dp"
+            android:layout_height="19dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+                android:layout_height="17dp"
+                android:layout_width="92dp"
+                android:layout_marginRight="8dp"/>
+
+            <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+                android:layout_width="80dp"
+                android:layout_height="17dp"/>
+        </LinearLayout>
+
+        <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+            android:layout_width="180dp"
+            android:layout_height="15dp"
+            android:layout_marginBottom="4dp"/>
+
+        <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+            android:layout_width="140dp"
+            android:layout_height="15dp"/>
     </LinearLayout>
 </RelativeLayout>
