--- a/app/src/main/res/layout/restaurant_cell.xml
+++ b/app/src/main/res/layout/restaurant_cell.xml
@@ -106,7 +106,7 @@
             android:textSize="13dp"/>
     </LinearLayout>
 
-    <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+    <com.randomappsinc.instafood.views.SkeletonView
         android:id="@+id/thumbnail_stub"
         android:layout_width="80dp"
         android:layout_height="80dp"
@@ -122,17 +122,17 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+        <com.randomappsinc.instafood.views.SkeletonView
             android:layout_width="24dp"
             android:layout_height="24dp"/>
 
-        <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+        <com.randomappsinc.instafood.views.SkeletonView
             android:layout_marginTop="4dp"
             android:layout_marginBottom="8dp"
             android:layout_width="52dp"
             android:layout_height="19dp"/>
 
-        <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+        <com.randomappsinc.instafood.views.SkeletonView
             android:layout_width="28dp"
             android:layout_height="19dp"/>
     </LinearLayout>
@@ -147,7 +147,7 @@
         android:layout_marginRight="4dp"
         android:orientation="vertical">
 
-        <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+        <com.randomappsinc.instafood.views.SkeletonView
             android:layout_width="100dp"
             android:layout_height="19dp"/>
 
@@ -159,22 +159,22 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+            <com.randomappsinc.instafood.views.SkeletonView
                 android:layout_height="17dp"
                 android:layout_width="92dp"
                 android:layout_marginRight="8dp"/>
 
-            <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+            <com.randomappsinc.instafood.views.SkeletonView
                 android:layout_width="80dp"
                 android:layout_height="17dp"/>
         </LinearLayout>
 
-        <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+        <com.randomappsinc.instafood.views.SkeletonView
             android:layout_width="180dp"
             android:layout_height="15dp"
             android:layout_marginBottom="4dp"/>
 
-        <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+        <com.randomappsinc.instafood.views.SkeletonView
             android:layout_width="140dp"
             android:layout_height="15dp"/>
     </LinearLayout>
