--- a/app/src/main/res/layout/skeleton_photo_cell.xml
+++ b/app/src/main/res/layout/skeleton_photo_cell.xml
@@ -11,7 +11,7 @@
     card_view:cardElevation="2dp"
     tools:ignore="RtlHardcoded">
 
-    <com.randomappsinc.automaticfoodfinder.views.SkeletonView
+    <com.randomappsinc.instafood.views.SkeletonView
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </android.support.v7.widget.CardView>
