--- a/app/src/main/res/layout/settings_item_cell.xml
+++ b/app/src/main/res/layout/settings_item_cell.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parent"
-    android:foreground="?android:attr/selectableItemBackground"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:padding="12dp"
-    android:gravity="center_vertical"
     tools:ignore="RtlHardcoded, SpUsage">
 
     <com.joanzapata.iconify.widget.IconTextView
@@ -15,8 +13,17 @@
         android:gravity="center"
         android:layout_width="24dp"
         android:layout_height="24dp"
+        android:layout_centerVertical="true"
         android:textColor="@color/dark_gray"
         android:textSize="22dp"/>
+
+    <Switch
+        android:id="@+id/shake_toggle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/settings_option"
@@ -24,7 +31,10 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
+        android:layout_toRightOf="@+id/settings_icon"
+        android:layout_toLeftOf="@id/shake_toggle"
+        android:layout_centerVertical="true"
         android:gravity="center_vertical"
         android:textSize="18dp"
         android:textColor="@color/dark_gray"/>
-</LinearLayout>
+</RelativeLayout>
