--- a/app/src/main/res/values/settings_strings.xml
+++ b/app/src/main/res/values/settings_strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="settings">Settings</string>
 
+    <string name="shake_enabled">Shake enabled</string>
     <string name="set_distance_unit">Set distance unit</string>
     <string name="send_feedback">Send feedback</string>
     <string name="share_this_app">Share this app</string>
@@ -9,6 +10,7 @@
     <string name="rate_this_app">Rate this app</string>
     <string name="source_code">Source code</string>
     <array name="settings_options">
+        <item>@string/shake_enabled</item>
         <item>@string/set_distance_unit</item>
         <item>@string/send_feedback</item>
         <item>@string/share_this_app</item>
@@ -18,15 +20,17 @@
     </array>
 
     <string name="play_store_error">Unable to open the Play Store.</string>
-    <string name="feedback_subject">Around Me Feedback</string>
+    <string name="feedback_subject">Instafood Feedback</string>
     <string name="send_email">Send email</string>
 
+    <string name="shake_icon">{ion-radio-waves}</string>
     <string name="walk_icon">{ion-android-walk}</string>
     <string name="email_icon">{ion-email}</string>
     <string name="android_icon">{ion-social-android}</string>
     <string name="rate_icon">{ion-thumbsup}</string>
     <string name="github_icon">{ion-social-github}</string>
     <array name="settings_icons">
+        <item>@string/shake_icon</item>
         <item>@string/walk_icon</item>
         <item>@string/email_icon</item>
         <item>@string/share_icon</item>
