--- a/app/src/main/res/values/settings_strings.xml
+++ b/app/src/main/res/values/settings_strings.xml
@@ -51,6 +51,6 @@
 
     <string name="share_app_message">
         Hey! I think you\'ll enjoy Instafood, the fastest food-finding app for Android.
-        You can download it at: https://play.google.com/store/apps/details?id=com.randomappsinc.aroundme
+        You can download it at: https://play.google.com/store/apps/details?id=com.randomappsinc.instafood
     </string>
 </resources>
