Prevent photo gallery from randomly hijacking scroll when loading content

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="8dp">
+        android:paddingBottom="8dp"
+        android:descendantFocusability="blocksDescendants">
 
         <com.google.android.gms.maps.MapView
             android:id="@+id/restaurant_map"
@@ -94,7 +95,6 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/restaurant_photos"
                 android:layout_height="match_parent"
-                android:focusable="false"
                 android:visibility="invisible"
                 style="@style/horizontal_gallery"/>
 
