--- a/app/src/main/res/values/filter_strings.xml
+++ b/app/src/main/res/values/filter_strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="filter">Filter</string>
     <string name="reset_all">Reset all</string>
-    <string name="search_radius">Search radius</string>
+    <string name="distance">Distance</string>
     <string name="radius_text_miles">Show me places within %.1f miles of me.</string>
     <string name="radius_text_kilometers">Show me places within %.1f kilometers of me.</string>
     <string name="sort_by">Sort by</string>
@@ -18,4 +18,6 @@
     <string name="other_options">Other options</string>
     <string name="hot_and_new">Hot and new</string>
     <string name="gender_neutral_restrooms">Gender neutral restrooms</string>
+
+    <string name="distance_icon">{ion-android-walk}</string>
 </resources>
