--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="dark_gray">#616161</color>
     <color name="gray">#9E9E9E</color>
     <color name="gray_300">#E0E0E0</color>
+    <color name="gray_200">#EEEEEE</color>
     <color name="gray_100">#F5F5F5</color>
 
     <color name="green">#4CAF50</color>
