--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,16 @@
 <resources>
+    <style name="hours_card">
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">bottom|center_horizontal</item>
+        <item name="android:visibility">gone</item>
+        <item name="cardUseCompatPadding">true</item>
+        <item name="cardCornerRadius">3dp</item>
+        <item name="cardElevation">2dp</item>
+        <item name="contentPadding">4dp</item>
+    </style>
+
     <style name="action_card">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
