Create view to deal with closing hour

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,8 @@
     <style name="hours_card">
         <item name="android:layout_margin">8dp</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">40dp</item>
         <item name="android:layout_gravity">bottom|center_horizontal</item>
-        <item name="android:visibility">gone</item>
         <item name="cardUseCompatPadding">true</item>
         <item name="cardCornerRadius">3dp</item>
         <item name="cardElevation">2dp</item>
