--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,9 +30,16 @@
                 <TextView
                     android:id="@+id/hours_text"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
                     android:textSize="15dp"
-                    android:maxLines="1"/>
+                    android:maxLines="1"
+                    android:visibility="gone"/>
+
+                <com.randomappsinc.instafood.views.SkeletonView
+                    android:id="@+id/skeleton_hours_text"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"/>
             </android.support.v7.widget.CardView>
         </FrameLayout>
 
