--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
             android:paddingRight="8dp">
 
             <android.support.v7.widget.CardView
-                android:id="@+id/call_button"
+                android:id="@+id/navigate_button"
                 android:layout_marginRight="4dp"
                 style="@style/action_card">
 
@@ -62,15 +62,15 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:gravity="center"
-                        android:text="@string/call_icon"
+                        android:text="@string/navigate_icon"
                         android:textSize="32dp"
-                        android:textColor="@color/green"/>
+                        android:textColor="@color/blue"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:text="@string/call"
+                        android:text="@string/navigate"
                         android:textSize="17dp"
                         android:textColor="@color/dark_gray"/>
                 </LinearLayout>
@@ -79,6 +79,7 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/share_button"
                 android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 style="@style/action_card">
 
                 <LinearLayout style="@style/action_container">
@@ -95,6 +96,30 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:text="@string/share"
+                        android:textSize="17dp"
+                        android:textColor="@color/dark_gray"/>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/call_button"
+                android:layout_marginLeft="4dp"
+                style="@style/action_card">
+
+                <LinearLayout style="@style/action_container">
+                    <com.joanzapata.iconify.widget.IconTextView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:gravity="center"
+                        android:text="@string/call_icon"
+                        android:textSize="32dp"
+                        android:textColor="@color/green"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="@string/call"
                         android:textSize="17dp"
                         android:textColor="@color/dark_gray"/>
                 </LinearLayout>
