Initial view and skeleton for additional info (transactions)

--- a/app/src/main/res/layout/review_cell.xml
+++ b/app/src/main/res/layout/review_cell.xml
@@ -9,10 +9,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?android:attr/selectableItemBackground"
-    card_view:cardUseCompatPadding="true"
-    card_view:cardCornerRadius="3dp"
-    card_view:cardElevation="2dp"
     card_view:contentPadding="8dp"
+    style="@style/generic_card"
     tools:ignore="ContentDescription, RtlHardcoded, Deprecation, SpUsage">
 
     <LinearLayout
