--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -127,15 +127,9 @@
         </LinearLayout>
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
             android:layout_marginBottom="4dp"
             android:text="@string/photos"
-            android:textColor="@color/dark_gray"
-            android:textSize="21dp"/>
+            style="@style/info_section_header"/>
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -164,14 +158,8 @@
         </FrameLayout>
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
             android:text="@string/what_others_saying"
-            android:textColor="@color/dark_gray"
-            android:textSize="21dp"/>
+            style="@style/info_section_header"/>
 
         <LinearLayout
             android:id="@+id/reviews_container"
@@ -195,5 +183,35 @@
 
             <include layout="@layout/skeleton_review_cell"/>
         </LinearLayout>
+
+        <TextView
+            android:text="@string/additional_information"
+            android:layout_marginTop="8dp"
+            style="@style/info_section_header"/>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/additional_info_card"
+            style="@style/additional_info_card">
+
+            <LinearLayout
+                android:id="@+id/additional_info_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/additional_info_stub"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <include layout="@layout/skeleton_transaction_row"/>
+
+                <include layout="@layout/skeleton_transaction_row"/>
+
+                <include layout="@layout/skeleton_transaction_row"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
     </LinearLayout>
 </ScrollView>
