--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -197,13 +197,45 @@
                 android:id="@+id/additional_info_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <LinearLayout style="@style/transaction_container">
+                    <com.joanzapata.iconify.widget.IconTextView
+                        android:id="@+id/pickup_icon"
+                        style="@style/transaction_icon"/>
+
+                    <TextView
+                        android:text="@string/does_pickup_takeout"
+                        style="@style/transaction_text"/>
+                </LinearLayout>
+
+                <LinearLayout style="@style/transaction_container">
+                    <com.joanzapata.iconify.widget.IconTextView
+                        android:id="@+id/delivery_icon"
+                        style="@style/transaction_icon"/>
+
+                    <TextView
+                        android:text="@string/delivers"
+                        style="@style/transaction_text"/>
+                </LinearLayout>
+
+                <LinearLayout style="@style/transaction_container">
+                    <com.joanzapata.iconify.widget.IconTextView
+                        android:id="@+id/reservation_icon"
+                        style="@style/transaction_icon"/>
+
+                    <TextView
+                        android:text="@string/takes_reservations"
+                        style="@style/transaction_text"/>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/additional_info_stub"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="4dp"
                 android:orientation="vertical">
 
                 <include layout="@layout/skeleton_transaction_row"/>
