--- a/app/src/main/res/layout/skeleton_transaction_row.xml
+++ b/app/src/main/res/layout/skeleton_transaction_row.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
     android:layout_marginBottom="8dp"
     android:orientation="horizontal"
     android:gravity="center_vertical"
