--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,9 +26,9 @@
         <item name="android:layout_marginTop">4dp</item>
         <item name="android:layout_marginLeft">8dp</item>
         <item name="android:layout_marginRight">8dp</item>
-        <item name="contentPaddingTop">8dp</item>
-        <item name="contentPaddingLeft">8dp</item>
-        <item name="contentPaddingRight">8dp</item>
+        <item name="contentPaddingTop">4dp</item>
+        <item name="contentPaddingLeft">4dp</item>
+        <item name="contentPaddingRight">4dp</item>
     </style>
 
     <style name="action_container">
@@ -56,5 +56,28 @@
         <item name="android:layout_marginRight">12dp</item>
         <item name="android:textColor">@color/dark_gray</item>
         <item name="android:textSize">21dp</item>
+    </style>
+
+    <style name="transaction_container">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="transaction_icon">
+        <item name="android:layout_width">32dp</item>
+        <item name="android:layout_height">32dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">28dp</item>
+    </style>
+
+    <style name="transaction_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">4dp</item>
+        <item name="android:textColor">@color/dark_gray</item>
+        <item name="android:textSize">17dp</item>
     </style>
 </resources>
