--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,16 @@
     android:id="@+id/homepage_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:ignore="SpUsage, RtlHardcoded">
+    tools:ignore="SpUsage, RtlHardcoded"
+    >
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="8dp"
-        android:descendantFocusability="blocksDescendants">
+        android:descendantFocusability="blocksDescendants"
+        >
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -21,11 +23,13 @@
             <com.google.android.gms.maps.MapView
                 android:id="@+id/restaurant_map"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                />
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/hours_card"
-                style="@style/hours_card">
+                style="@style/hours_card"
+                >
 
                 <TextView
                     android:id="@+id/hours_text"
@@ -34,13 +38,15 @@
                     android:gravity="center_vertical"
                     android:textSize="15dp"
                     android:maxLines="1"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    />
 
                 <com.randomappsinc.instafood.views.SkeletonView
                     android:id="@+id/skeleton_hours_text"
                     android:layout_width="120dp"
-                    android:layout_height="match_parent"/>
-            </android.support.v7.widget.CardView>
+                    android:layout_height="match_parent"
+                    />
+            </androidx.cardview.widget.CardView>
         </FrameLayout>
 
         <include layout="@layout/restaurant_cell"/>
@@ -50,12 +56,14 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingLeft="8dp"
-            android:paddingRight="8dp">
+            android:paddingRight="8dp"
+            >
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/navigate_button"
                 android:layout_marginRight="3dp"
-                style="@style/action_card">
+                style="@style/action_card"
+                >
 
                 <LinearLayout style="@style/action_container">
                     <com.joanzapata.iconify.widget.IconTextView
@@ -64,7 +72,8 @@
                         android:gravity="center"
                         android:text="@string/navigate_icon"
                         android:textSize="32dp"
-                        android:textColor="@color/blue"/>
+                        android:textColor="@color/blue"
+                        />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -72,11 +81,12 @@
                         android:layout_marginTop="4dp"
                         android:text="@string/navigate"
                         android:textSize="17dp"
-                        android:textColor="@color/dark_gray"/>
+                        android:textColor="@color/dark_gray"
+                        />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/share_button"
                 android:layout_marginLeft="3dp"
                 android:layout_marginRight="3dp"
@@ -89,7 +99,8 @@
                         android:gravity="center"
                         android:text="@string/share_icon"
                         android:textSize="32dp"
-                        android:textColor="@color/red"/>
+                        android:textColor="@color/red"
+                        />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -97,14 +108,16 @@
                         android:layout_marginTop="4dp"
                         android:text="@string/share"
                         android:textSize="17dp"
-                        android:textColor="@color/dark_gray"/>
+                        android:textColor="@color/dark_gray"
+                        />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/call_button"
                 android:layout_marginLeft="3dp"
-                style="@style/action_card">
+                style="@style/action_card"
+                >
 
                 <LinearLayout style="@style/action_container">
                     <com.joanzapata.iconify.widget.IconTextView
@@ -113,7 +126,8 @@
                         android:gravity="center"
                         android:text="@string/call_icon"
                         android:textSize="32dp"
-                        android:textColor="@color/green"/>
+                        android:textColor="@color/green"
+                        />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -121,9 +135,10 @@
                         android:layout_marginTop="4dp"
                         android:text="@string/call"
                         android:textSize="17dp"
-                        android:textColor="@color/dark_gray"/>
+                        android:textColor="@color/dark_gray"
+                        />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
         <View style="@style/divider"/>
@@ -131,17 +146,19 @@
         <TextView
             android:layout_marginBottom="4dp"
             android:text="@string/photos"
-            style="@style/info_section_header"/>
+            style="@style/info_section_header"
+            />
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="150dp">
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/restaurant_photos"
                 android:layout_height="match_parent"
                 android:visibility="invisible"
-                style="@style/horizontal_gallery"/>
+                style="@style/horizontal_gallery"
+                />
 
             <LinearLayout
                 android:id="@+id/photos_stub"
@@ -163,7 +180,8 @@
 
         <TextView
             android:text="@string/what_others_saying"
-            style="@style/info_section_header"/>
+            style="@style/info_section_header"
+            />
 
         <LinearLayout
             android:id="@+id/reviews_container"
@@ -171,7 +189,8 @@
             android:layout_height="wrap_content"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:orientation="vertical"/>
+            android:orientation="vertical"
+            />
 
         <LinearLayout
             android:id="@+id/reviews_stub"
@@ -179,7 +198,8 @@
             android:layout_height="match_parent"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <include layout="@layout/skeleton_review_cell"/>
 
@@ -195,45 +215,53 @@
             android:layout_marginTop="8dp"
             style="@style/info_section_header"/>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/additional_info_card"
-            style="@style/additional_info_card">
+            style="@style/additional_info_card"
+            >
 
             <LinearLayout
                 android:id="@+id/additional_info_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="gone"
+                >
 
                 <LinearLayout style="@style/transaction_container">
                     <com.joanzapata.iconify.widget.IconTextView
                         android:id="@+id/pickup_icon"
-                        style="@style/transaction_icon"/>
+                        style="@style/transaction_icon"
+                        />
 
                     <TextView
                         android:text="@string/does_pickup_takeout"
-                        style="@style/transaction_text"/>
+                        style="@style/transaction_text"
+                        />
                 </LinearLayout>
 
                 <LinearLayout style="@style/transaction_container">
                     <com.joanzapata.iconify.widget.IconTextView
                         android:id="@+id/delivery_icon"
-                        style="@style/transaction_icon"/>
+                        style="@style/transaction_icon"
+                        />
 
                     <TextView
                         android:text="@string/delivers"
-                        style="@style/transaction_text"/>
+                        style="@style/transaction_text"
+                        />
                 </LinearLayout>
 
                 <LinearLayout style="@style/transaction_container">
                     <com.joanzapata.iconify.widget.IconTextView
                         android:id="@+id/reservation_icon"
-                        style="@style/transaction_icon"/>
+                        style="@style/transaction_icon"
+                        />
 
                     <TextView
                         android:text="@string/takes_reservations"
-                        style="@style/transaction_text"/>
+                        style="@style/transaction_text"
+                        />
                 </LinearLayout>
             </LinearLayout>
 
@@ -242,7 +270,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="4dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                >
 
                 <include layout="@layout/skeleton_transaction_row"/>
 
@@ -250,6 +279,6 @@
 
                 <include layout="@layout/skeleton_transaction_row"/>
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </ScrollView>
