--- a/app/src/main/res/layout/restaurant_photo_cell.xml
+++ b/app/src/main/res/layout/restaurant_photo_cell.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -27,4 +27,4 @@
         android:text="@string/no_photos"
         android:textSize="17sp"
         android:textColor="@color/dark_gray"/>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
