--- a/app/src/main/res/layout/skeleton_review_cell.xml
+++ b/app/src/main/res/layout/skeleton_review_cell.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -55,4 +55,4 @@
                 android:layout_gravity="end|center_vertical"/>
         </FrameLayout>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
